# mincha-minder

./: Cargo.nix  Cargo.toml  README.md  flake.nix  mincha.ics
elm/: flake.nix
elm/src/: Main.elm
src/: caldav.rs  main.rs  mincha_minder.rs  web.rs
src/templates/: landing.html.hbs  schedule.html.hbs
