[package]
name = "mincha-minder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
icalendar = "0.15.4"
rocket = "0.5.0-rc.3"
sunrise = "1.0.0"
tzf-rs = "0.3.0"
tzfile = "0.1.3"
# tokio = { version = "1", features = ["full"] }
# warp = "0.3"
